test/cli/test-context-configmap-vpol/resources/pod-with-spot-computeclass.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-spot-computeclass
  namespace: test-namespace
spec:
  nodeSelector:
    cloud.google.com/compute-class: spot-compute-class
  containers:
  - name: test-container
    image: nginx:latest
