test/cli/test-context-configmap-vpol/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
clusterResources:
- clusterresources.yaml
kind: Test
metadata:
  name: test-context-resource-lookup
policies:
- policy.yaml
resources:
- resources/pod-with-spot-computeclass.yaml
- resources/pod-with-non-spot-computeclass.yaml
- resources/pod-with-mixed-computeclass.yaml
- resources/pod-with-default-computeclass.yaml
- resources/deployment-with-spot-computeclass.yaml
- resources/deployment-with-non-spot-computeclass.yaml
results:
- isValidatingPolicy: true
  kind: Deployment
  policy: computeclasses-enforce-non-spot-usage
  resources:
  - deployment-with-non-spot-computeclass
  result: fail
- isValidatingPolicy: true
  kind: Pod
  policy: computeclasses-enforce-non-spot-usage
  resources:
  - pod-with-non-spot-computeclass
  result: fail
- isValidatingPolicy: true
  kind: Deployment
  policy: computeclasses-enforce-non-spot-usage
  resources:
  - deployment-with-spot-computeclass
  result: pass
- isValidatingPolicy: true
  kind: Pod
  policy: computeclasses-enforce-non-spot-usage
  resources:
  - pod-with-spot-computeclass
  - pod-with-mixed-computeclass
  - pod-with-default-computeclass
  result: pass
